--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+    compile group: 'org.achartengine', name: 'achartengine', version: '1.2.0'
 
     testCompile 'junit:junit:4.12'
 }
